--- a/other/SocialNetworkGraph.adoc
+++ b/other/SocialNetworkGraph.adoc
@@ -16,11 +16,11 @@ image::http://www.sarahmei.com/blog/wp-content/uploads/2013/11/Screen-Shot-2013-
 // hide
 [source,cypher]
 ----
-CREATE (rachel:User {name: "Rachel Green"})
-CREATE (monica:User {name: "Monica Geller"})
-CREATE (phoebe:User {name: "Phoebe Buffay"})
-CREATE (joey:User {name: "Joey Tribbiani"})
-CREATE (chandler:User {name: "Chandler Bing"})
+CREATE (rachel:User {name: "Rachel Green2"})
+CREATE (monica:User {name: "Monica Geller2"})
+CREATE (phoebe:User {name: "Phoebe Buffay2"})
+CREATE (joey:User {name: "Joey Tribbiani2"})
+CREATE (chandler:User {name: "Chandler Bing2"})
 CREATE (ross:User {name: "Ross Geller"})
 
 CREATE (rachel)-[:FRIEND]->(monica)
