--- a/test.adoc
+++ b/test.adoc
@@ -16,11 +16,11 @@ image::http://www.sarahmei.com/blog/wp-content/uploads/2013/11/Screen-Shot-2013-
 // hide
 [source,cypher]
 ----
-CREATE (rachel:User {name: "Rachel Green"})
-CREATE (monica:User {name: "Monica Geller"})
-CREATE (phoebe:User {name: "Phoebe Buffay"})
-CREATE (joey:User {name: "Joey Tribbiani"})
-CREATE (chandler:User {name: "Chandler Bing"})
+CREATE (rachel:User {name: "Rachel Green2"})
+CREATE (monica:User {name: "Monica Geller2"})
+CREATE (phoebe:User {name: "Phoebe Buffay2"})
+CREATE (joey:User {name: "Joey Tribbiani2"})
+CREATE (chandler:User {name: "Chandler Bing2"})
 CREATE (ross:User {name: "Ross Geller"})
 
 CREATE (rachel)-[:FRIEND]->(monica)
@@ -77,7 +77,7 @@ We'll start with one to find the posts made by Rachel's friends:
 [source,cypher]
 ----
 MATCH (u:User)-[:FRIEND]-(f)-[:POSTED]->(post)
-WHERE u.name = "Rachel Green"
+WHERE u.name = "Rachel Green2"
 RETURN f.name AS friend, post.text as content
 ----
 
@@ -88,7 +88,7 @@ Our next query might be a slight variation on this to collect the people who hav
 [source,cypher]
 ----
 MATCH (u:User)-[:FRIEND]-(f)-[:POSTED]->(post)<-[like:LIKED]-(liker)
-WHERE u.name = "Rachel Green"
+WHERE u.name = "Rachel Green2"
 RETURN f.name AS friend, post.text as content, COLLECT(liker.name) as liked_by
 ----
 
@@ -99,7 +99,7 @@ A third query could collect all actions on a post, be they likes or comments:
 [source,cypher]
 ----
 MATCH (u:User)-[:FRIEND]-(f)-[:POSTED]->(post)<-[a:LIKED|:COMMENTED]->(person) 
-WHERE u.name = "Rachel Green" 
+WHERE u.name = "Rachel Green2" 
 RETURN f.name AS friend, post.text AS content, 
        COLLECT({ text: a.text, person: person.name, action: TYPE(a)}) AS actions
 ----
