--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -3,6 +3,27 @@
 We want to build an online learning platform with the following attributes:
 //list
 [loweralpha]
-. a) it will contain all topics for digital enlightenment
-. b) the set of topics that a user will explore will depend on who the user is
-. c) the delivery method (learning experience) will adjust to who the user is
+. it will contain all topics for digital enlightenment
+. the set of topics that a user will explore will depend on who the user is
+. the delivery method (learning experience) will adjust to who the user is
+
+CAVEAT: We want the journey through the space of topics to be flexible. Hurrah! Use a graph!
+
+= What is a graph?
+
+[source,cypher]
+----
+CREATE
+
+//Fields
+(ct:Field {name:"Comp. Thinking"}),
+(data:Field {name:"Data"}),
+(web:Field {name:"Web"}),
+
+
+
+----
+
+= Why is it useful?
+
+Employ neo4j tech and cypher language to build
