--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -22,6 +22,20 @@ CREATE
 (web:Field {name:"Web"}),
 
 
+(html:Topic {name:"html"}),
+(html)-[:RT]->(web),
+(js:Topic {name:"JavaScript"}),
+(js)-[:RT]->(web),
+(js)-[:RT]->(ct),
+
+(python:Topic {name:"Python"}),
+(python)-[:RT]->(data),
+(python)-[:RT]->(ct),
+
+(cloud:Topic {name:"Cloud"}),
+(cloud)-[:RT]->(data),
+(cloud)-[:RT]->(web);
+
 MATCH n RETURN n as node;
 
 ----
