--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -68,15 +68,15 @@ on my decoded google drive. We should discuss moving that to a decoded github fo
 === Creating the topic space
 //list
 .Bulleted
-. Obtain a list of topics looking through all our presentations and table of contents from online books
-. Identify common themes and fields to obtain a higher level view of what digital enlightenment is about.
-. Create a hierarchy of topics/concepts in order to construct the graph
-.. Fields (Computational Thinking, Data, Security, Web, Hardware)
-.. Themes (e.g. Coding, Analytics) & SubThemes (e.g. Statistics, Machine Learning) & SubSubTheme (e.g. Machine Learning: Unsupervised)
-.. Topics (e.g. HTML5) + SubTopics (e.g. SVG)
-.. ``Cases'' (topics that are hard to categorize)
-. Add a node to the graph for each of the above
-. Create `links' between nodes that are related in a very obvious way.
+* Obtain a list of topics looking through all our presentations and table of contents from online books
+* Identify common themes and fields to obtain a higher level view of what digital enlightenment is about.
+* Create a hierarchy of topics/concepts in order to construct the graph
+-- Fields (Computational Thinking, Data, Security, Web, Hardware)
+-- Themes (e.g. Coding, Analytics) & SubThemes (e.g. Statistics, Machine Learning) & SubSubTheme (e.g. Machine Learning: Unsupervised)
+-- Topics (e.g. HTML5) + SubTopics (e.g. SVG)
+-- ``Cases'' (topics that are hard to categorize)
+* Add a node to the graph for each of the above
+* Create `links' between nodes that are related in a very obvious way.
 
 == Where are we?
 
