--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -70,13 +70,22 @@ on my decoded google drive. We should discuss moving that to a decoded github fo
 .Bulleted
 * Obtain a list of topics looking through all our presentations and table of contents from online books
 * Identify common themes and fields to obtain a higher level view of what digital enlightenment is about.
-* Create a hierarchy of topics/concepts in order to construct the graph
+* Create a hierarchy of topics/concepts in order to construct the graph and better understand the landscape of digital enlightenment:
   - Fields (Computational Thinking, Data, Security, Web, Hardware)
   - Themes (e.g. Coding, Analytics) & SubThemes (e.g. Statistics, Machine Learning) & SubSubTheme (e.g. Machine Learning: Unsupervised)
   - Topics (e.g. HTML5) + SubTopics (e.g. SVG)
   - ``Cases'' (topics that are hard to categorize)
 * Add a node to the graph for each of the above
 * Create `links' between nodes that are related in a very obvious way.
+
+[source,cypher]
+----
+
+MATCH (n) RETURN n;
+
+----
+
+//table
 
 == Where are we?
 
