--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -81,7 +81,7 @@ on my decoded google drive. We should discuss moving that to a decoded github fo
 [source,cypher]
 ----
 
-MATCH (a {name:"JavaScript"})-[r:related]->(a2), (b {name:"Data"})-[q:RT]->(b2)
+MATCH (a {name:"JavaScript"})-[r:related]->(a2), (b {name:"Data"})-[q:related]->(b2)
 RETURN a,b;
 
 ----
