--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -28,6 +28,9 @@ CREATE
 (ct:Field {name:"Comp. Thinking"}),
 (data:Field {name:"Data"}),
 (web:Field {name:"Web"}),
+(data)-[:related]->(web),
+(data)-[:related]->(ct),
+(ct)-[:related]->(web),
 
 
 (html:Topic {name:"html"}),
@@ -35,14 +38,20 @@ CREATE
 (js:Topic {name:"JavaScript"}),
 (js)-[:related]->(web),
 (js)-[:related]->(ct),
+(web)-[:related]->(js),
+(ct)-[:related]->(js),
 
 (python:Topic {name:"Python"}),
 (python)-[:related]->(data),
 (python)-[:related]->(ct),
+(ct)-[:related]->(python),
+(data)-[:related]->(python),
 
 (cloud:Topic {name:"Cloud"}),
 (cloud)-[:related]->(data),
-(cloud)-[:related]->(web);
+(cloud)-[:related]->(web),
+(data)-[:related]->(cloud),
+(web)-[:related]->(cloud);
 
 MATCH n RETURN n as node;
 
