--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -90,6 +90,10 @@ on my decoded google drive. We should discuss moving that to a decoded github fo
 [source,cypher]
 ----
 
+(jquery:SubTopic {name:"jQuery", parent_topic:["JavaScript"]}),
+(jquery)-[:related]->(js),
+(jquery)-[:related]->(data),
+
 MATCH (a {name:"JavaScript"})-[r:related]->(a2 {name:"Data"})
 RETURN a,a2 as node;
 
