--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -51,7 +51,13 @@ CREATE
 (cloud)-[:related]->(data),
 (cloud)-[:related]->(web),
 (data)-[:related]->(cloud),
-(web)-[:related]->(cloud);
+(web)-[:related]->(cloud),
+
+(jquery:SubTopic {name:"jQuery", parent_topic:["JavaScript"]}),
+(jquery)-[:related]->(js),
+(jquery)-[:related]->(data),
+(data)-[:related]->(jquery),
+(js)-[:related]->(jquery);
 
 MATCH n RETURN n as node;
 
@@ -87,35 +93,19 @@ on my decoded google drive. We should discuss moving that to a decoded github fo
 * Add a node to the graph for each of the above
 * Create `links' between nodes that are related in a very obvious way.
 
-//hide
-[source,cypher]
-----
-
-CREATE
-
-(jquery:SubTopic {name:"jQuery", parent_topic:["JavaScript"]}),
-(jquery)-[:related]->(js),
-(jquery)-[:related]->(data),
-(data)-[:related]->(jquery),
-(js)-[:related]->(jquery);
-
-----
-//graph_result
 
 [source,cypher]
 ----
 MATCH (a {name:"JavaScript"})-[r:related]->(a2 {name:"Data"})
 RETURN a,a2 as node;
-
 ----
 //graph_result
 
 [source,cypher]
 ----
-MATCH (a {name:"JavaScript"})-->(b)-->(a2 {name:"Data"})
+MATCH (a {name:"JavaScript"})-[r:related]->(b)-[q:related]->(a2 {name:"Data"})
 RETURN a,b,a2;
 ----
-
 //graph_result
 
 //table
