--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -89,23 +89,20 @@ anchor:anchor-2[]
 anchor:anchor-2[]
 * Create a hierarchy of topics/concepts in order to construct the graph and better understand the landscape of digital enlightenment:
   - *Fields* (Computational Thinking, Data, Security, Web, Hardware)
-    anchor:anchor-1[]
-    +
     ----
     `Fields' are the main areas that collectively capture all concepts in digital enlightenment. For someone to be
     truely digitally enlightened, they must have sufficiently explored all `Fields'.
     ----
-    +
-    anchor:anchor-1[]
-  - Themes (e.g. Coding, Analytics) & SubThemes (e.g. Statistics, Machine Learning) & SubSubTheme (e.g. Machine Learning: Unsupervised)
-    anchor:anchor-1[]
-  - Topics (e.g. HTML5) + SubTopics (e.g. SVG)
-    anchor:anchor-1[]
-  - ``Cases'' (topics that are hard to categorize)
-  anchor:anchor-1[]
-* Add a node to the graph for each of the above
-anchor:anchor-1[]
-* Create `links' between nodes that are related in a very obvious way. At this stage, edges are bidirectional and 
+    anchor:anchor-2[]
+  - *Themes* (e.g. Coding, Analytics) & SubThemes (e.g. Statistics, Machine Learning) & SubSubTheme (e.g. Machine Learning: Unsupervised)
+    anchor:anchor-2[]
+  - *Topics* (e.g. HTML5) + SubTopics (e.g. SVG)
+    anchor:anchor-2[]
+  - *Cases* (topics that are hard to categorize)
+  anchor:anchor-2[]
+* *Add a node to the graph for each of the above*
+anchor:anchor-2[]
+* *Create `links' between nodes that are related in a very obvious way.* At this stage, edges are bidirectional and 
 carry equal weight. (this will eventually have to be revised...)
 
 
