--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -96,12 +96,7 @@ anchor:anchor-2[]
     `Fields' are the main areas that collectively capture all concepts in digital enlightenment. For someone to be
     truely digitally enlightened, they must have sufficiently explored all `Fields'.
 
-    ++++
-    <p>
-    <table border="1">
-    <tr><td>Comp. Thinking<td>Data<td>Security<td>Web<td>Hardware
-    </table>
-    ++++
+    | Comp. Thinking | Data | Security | Web | Hardware |
 
   - *Themes* (e.g. Coding, Analytics) & SubThemes (e.g. Statistics, Machine Learning) & SubSubTheme (e.g. Machine Learning: Unsupervised)
     anchor:anchor-2[]
