--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -90,18 +90,18 @@ anchor:anchor-2[]
 anchor:anchor-2[]
 
 * Create a hierarchy of topics/concepts in order to construct the graph and better understand the landscape of digital enlightenment:
-  - *Fields* (Computational Thinking, Data, Security, Web, Hardware)
+  - *Fields* 
   
 
     `Fields' are the main areas that collectively capture all concepts in digital enlightenment. For someone to be
     truely digitally enlightened, they must have sufficiently explored all `Fields'.
 
-    |      Comp. Thinking       |       Data      |      Security      |      Web       |       Hardware      |
+         *|      Comp. Thinking       |       Data      |      Security      |      Web       |       Hardware      |*
 
   - *Themes* (e.g. Coding, Analytics) & SubThemes (e.g. Statistics, Machine Learning) & SubSubTheme (e.g. Machine Learning: Unsupervised)
-    anchor:anchor-2[]
+    
   - *Topics* (e.g. HTML5) + SubTopics (e.g. SVG)
-    anchor:anchor-2[]
+    
   - *Cases* (topics that are hard to categorize)
   anchor:anchor-2[]
   
