--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -120,15 +120,32 @@ anchor:anchor-2[]
   
     Websites should be linked to all other topics, themes etc to which they are relevant. Websites should also have a url.
 
+  - *People* (e.g. Ada Lovelace)
+  
+    All(?) individuals that we refer to in our slides have been included here, and of course more may be added. People have a full name and they are linked to all the topics, themes, fields to which they have contributed.
+
   - *Cases* (topics that are hard to categorize)
+  
+    Anything that is a bit too complicated to categorize is set as `Cases' -- for example something that could be a SubTopic of several topics. In principle this should change and allow nesting within multiple categories but my cypher is not good enough. Current examples of cases include: Pearson's chi-squared test, Timeseries and many others. Essentially `Cases' can also be Topics but it's simpler to have them as separate whenever an algorithm will look at hierarchy.
 
 === Creating a graph
+
 //list
-* *Add a node to the graph for each of the above*
+* *Add a node to the graph for each of the categories above*
 
+  A node should be anything that we envisage will hold data (information/slides/exercises). This can be anything from a field to a case.
 
-* *Create `links' between nodes that are related in a very obvious way.* At this stage, edges are bidirectional and 
-carry equal weight. (this will eventually have to be revised...)
+  *The process of categorization/classification of nodes should be supervised by more than one person...*
+
+* *Create `links' between nodes that are related in a very obvious way.* 
+
+  Edges demonstrate the relationship between nodes. If two nodes are related then they have an edge that connects them.
+
+  At this stage, edges are bidirectional and carry equal weight. This will eventually have to be revised... for example, some relationships are stronger than others (e.g. html with html5 vs xml and file formats)
+  
+  NOTE: Edges are are added only if two nodes are related in a very obvious way. Obviously the more edges the more flexbile the journey through the graph can be, but this has to balance with a sensible number of possible journeys and journey architecture. For example, Google Doc -> Data Store but Google Doc !-> Data.
+  
+  *The process of adding edges should be supervised by more than one person....*
 
 
 [source,cypher]
