--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -124,6 +124,10 @@ anchor:anchor-2[]
   
     All(?) individuals that we refer to in our slides have been included here, and of course more may be added. People have a full name and they are linked to all the topics, themes, fields to which they have contributed.
 
+  - *Books* (useful books; e.g. HTML5 Cookbook by O'reilly media)
+  
+    All books should have a url linking to something useful. Ideally we also need an author and publisher.
+
   - *Cases* (topics that are hard to categorize)
   
     Anything that is a bit too complicated to categorize is set as `Cases' -- for example something that could be a SubTopic of several topics. In principle this should change and allow nesting within multiple categories but my cypher is not good enough. Current examples of cases include: Pearson's chi-squared test, Timeseries and many others. Essentially `Cases' can also be Topics but it's simpler to have them as separate whenever an algorithm will look at hierarchy.
@@ -132,12 +136,18 @@ anchor:anchor-2[]
 
 === Collecting Nodes
 
-//list
 *Add a node to the graph for each of the categories above*
 
-  A node should be anything that we envisage will hold data (information/slides/exercises). This can be anything from a field to a case.
+  A node should be anything that we envisage will hold data (information/slides/exercises). This can be anything from a field to a case. There are tons of things that I have not included here (for example consider ToC from http://shop.oreilly.com/product/9780596805531.do) -- we should discuss the level of detail that this should have. For example should 'booleans' have their own node?
 
   *The process of categorization/classification of nodes should be supervised by more than one person...*
+  
+//hidden
+[source,cypher]
+----
+MATCH (n)-[:related]->(b) RETURN n;
+----
+//graph_results
 
 === Adding Edges
 
