--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -157,7 +157,7 @@ CREATE
 (servers:Topic {name:"Servers"});
 
 MATCH (n)
-WHERE n:Website OR (n.name = "Input" OR n.name="Servers)
+WHERE n:Website XOR (n.name = "Input" XOR n.name="Servers)
 RETURN n;
 
 ----
