--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -180,7 +180,7 @@ CREATE
 (cloud)-[:related]->(servers),
 (undata)-[:related]->(data);
 ----
-//graph_results
+//graph
 
   NOTE: Edges are are added only if two nodes are related in a very obvious way (for example Google Fusion has not been linked to anything). Obviously the more edges the more flexbile the journey through the graph can be, but this has to balance with a sensible number of possible journeys and journey architecture. For example, Google Doc -> Data Store but Google Doc !-> Data. This highlights the importance of looking further away then 1st degree relationships whenever we are exploring the graph.
   
