--- a/knowledge_graph.adoc
+++ b/knowledge_graph.adoc
@@ -157,7 +157,7 @@ CREATE
 (servers:Topic {name:"Servers"});
 
 MATCH (n)
-WHERE n:Website OR n:Tools OR n.name = "Servers" OR n.name = "Input"
+WHERE n:Website OR n:Tools OR n.name = "Servers" OR n.name = "Input" OR n:Topic
 RETURN n;
 
 ----
